[package]
name = "parser"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "The parser for wgsl-analyzer."
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
edition.workspace = true
logos = "0.15.1"
rowan.workspace = true

[dev-dependencies]
expect-test.workspace = true

[build-dependencies]
lelwel = { git = "https://github.com/0x2a-42/lelwel.git", version = "0.10.0" }

[lints]
workspace = true
