[package]
name = "profile"
version = "0.0.0"
repository.workspace = true
description = "A collection of tools for profiling wgsl-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]

[dependencies]
cfg-if = "1.0.3"
paths.workspace = true
jemalloc-ctl = { version = "0.6.0", package = "tikv-jemalloc-ctl", optional = true, features = [
  "stats",
] }

[target.'cfg(all(target_os = "linux", not(target_env = "ohos")))'.dependencies]
perf-event = "=0.4.8"

[target.'cfg(all(target_os = "linux", target_env = "gnu"))'.dependencies]
libc = "0.2.175"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
] }

[features]
cpu_profiler = []
jemalloc = ["jemalloc-ctl"]

# Uncomment to enable for the whole crate graph
# default = [ "cpu_profiler" ]

[lints]
workspace = true
