[package]
name = "profile"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "A collection of tools for profiling wgsl-analyzer."
repository.workspace = true
license.workspace = true

[lib]

[dependencies]
cfg-if = "1.0.4"
jemalloc-ctl = { package = "tikv-jemalloc-ctl", version = "0.6.0", features = [
  "stats",
], optional = true }

[target.'cfg(all(target_os = "linux", not(target_env = "ohos")))'.dependencies]
perf-event = "=0.4.8"

[target.'cfg(all(target_os = "linux", target_env = "gnu"))'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
] }

[features]
cpu_profiler = []
jemalloc = ["jemalloc-ctl"]

# Uncomment to enable for the whole crate graph
# default = [ "cpu_profiler" ]

[lints]
workspace = true
