[package]
name = "project-model"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "A representation for a WESL project for wgsl-analyzer."
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
anyhow = "1.0.100"
base-db.workspace = true
edition.workspace = true
itertools = "0.14.0"
la-arena = "0.3.1"
paths = { workspace = true, features = ["serde1"] }
rustc-hash = "2.1.1"
semver = "1.0.27"
serde = "1.0.228"
serde_json = "1.0.145"
stdx.workspace = true
toml = "0.9.11+spec-1.1.0"
toolchain.workspace = true
tracing = "0.1.41"
triomphe = "0.1.15"

[dev-dependencies]
expect-test = "1.5.1"

[lints]
workspace = true
