[package]
name = "project-model"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "A representation for a WESL project for wgsl-analyzer."
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
base-db.workspace = true
edition.workspace = true
itertools.workspace = true
la-arena.workspace = true
paths = { workspace = true, features = ["serde1"] }
rustc-hash.workspace = true
semver = "1.0.27"
serde.workspace = true
serde_json.workspace = true
stdx.workspace = true
toml = "0.9.11"
toolchain.workspace = true
tracing.workspace = true
triomphe.workspace = true

[dev-dependencies]
expect-test.workspace = true

[lints]
workspace = true
