[package]
name = "stdx"
version = "0.0.0"
repository.workspace = true
description = "Missing batteries for standard libraries for wgsl-analyzer."

publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
backtrace = { version = "0.3.75", optional = true }
jod-thread = "1.0.0"
crossbeam-channel = "0.5.15"
itertools = "0.14.0"
tracing = "0.1.41"
# Think twice before adding anything here

[target.'cfg(unix)'.dependencies]
libc = "0.2.175"

[target.'cfg(windows)'.dependencies]
miow = "0.6.1"
windows-sys = { version = "0.61.0", features = ["Win32_Foundation"] }

[features]
# Uncomment to enable for the whole crate graph
# default = [ "backtrace" ]
force-always-assert = []

[lints]
workspace = true
