[package]
name = "stdx"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Missing batteries for standard libraries for wgsl-analyzer."
repository.workspace = true
license.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
backtrace = { version = "0.3.76", optional = true }
crossbeam-channel.workspace = true
itertools.workspace = true
jod-thread = "1.0.0"
tracing.workspace = true
# Think twice before adding anything here

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
miow = "0.6.1"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation"] }

[features]
# Uncomment to enable for the whole crate graph
# default = [ "backtrace" ]
force-always-assert = []

[lints]
workspace = true
