[package]
name = "syntax"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Concrete syntax tree definitions for wgsl-analyzer."
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
either = "1.15.0"
itertools = "0.14.0"
parser.workspace = true
rowan = "0.16.1"
smol_str = "0.3.4"
triomphe = { version = "0.1.15", default-features = false, features = ["std"] }

[lints]
workspace = true
