[package]
name = "syntax"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Concrete syntax tree definitions for wgsl-analyzer."
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
either.workspace = true
itertools.workspace = true
parser.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
smol_str.workspace = true
triomphe.workspace = true

[dev-dependencies]
expect-test.workspace = true

[lints]
workspace = true
