[package]
name = "test-utils"
version = "0.0.0"
repository.workspace = true
description = "Assorted testing utilities for wgsl-analyzer"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
# Avoid adding deps here, this crate is widely used in tests it should compile fast!
dissimilar = "1.0.10"
text-size = "1.1.1"
rustc-hash = "2.1.1"

paths.workspace = true
stdx.workspace = true
profile.workspace = true

[lints]
workspace = true
