[package]
name = "test-utils"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Assorted testing utilities for wgsl-analyzer"
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
# Avoid adding deps here, this crate is widely used in tests it should compile fast!
dissimilar.workspace = true
paths.workspace = true
profile.workspace = true
rustc-hash.workspace = true
stdx.workspace = true
text-size.workspace = true

[lints]
workspace = true
