[package]
name = "toolchain"
version = "0.0.0"
repository.workspace = true
description = "Discovery of `wesl` and other executables for wgsl-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]

[dependencies]
paths.workspace = true
home.workspace = true
camino.workspace = true

[lints]
workspace = true
