[package]
name = "toolchain"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Discovery of executables for wgsl-analyzer."
repository.workspace = true
license.workspace = true

[lib]

[dependencies]
camino = { workspace = true }
home = "0.5.11"

[lints]
workspace = true
