[package]
name = "vfs-notify"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Implementation of `loader::Handle` for wgsl-analyzer."
repository.workspace = true
license.workspace = true

[lib]

[dependencies]
camino.workspace = true
crossbeam-channel.workspace = true
notify = "8.2.0"
paths.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
stdx.workspace = true
tracing.workspace = true
vfs.workspace = true
walkdir.workspace = true

[lints]
workspace = true
