[package]
name = "vfs-notify"
version = "0.0.0"
description = "Implementation of `loader::Handle` for rust-analyzer."
repository.workspace = true

edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
crossbeam-channel.workspace = true
notify = "8.2.0"
rayon = "1.10.0"
tracing.workspace = true
walkdir = "2.5.0"

paths.workspace = true
rustc-hash.workspace = true
stdx.workspace = true
vfs.workspace = true

[lints]
workspace = true
