[package]
name = "wgsl-analyzer"
version = "0.0.0"
# homepage = "https://wgsl-analyzer.github.io/"
repository.workspace = true
description = "A language server for the WGSL programming language"
# documentation = "https://wgsl-analyzer.github.io/manual.html"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]

[[bin]]
name = "wgsl-analyzer"
path = "src/bin/main.rs"

[dependencies]
anyhow.workspace = true
# base64.workspace = true
crossbeam-channel.workspace = true
# dirs.workspace = true
dissimilar.workspace = true
ide-completion.workspace = true
itertools.workspace = true
# scip.workspace = true
lsp-types = { version = "=0.95.0", features = ["proposed"] }
parking_lot.workspace = true
xflags.workspace = true
# threadpool.workspace = true
salsa.workspace = true
oorandom.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
serde.workspace = true
serde_derive.workspace = true
# tenthash.workspace = true
num_cpus.workspace = true
mimalloc = { version = "0.1.46", default-features = false, optional = true }
lsp-server.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tree.workspace = true
triomphe.workspace = true
# toml.workspace = true
nohash-hasher.workspace = true
walkdir.workspace = true
semver.workspace = true
memchr.workspace = true
cargo_metadata.workspace = true
# process-wrap.workspace = true
# cfg.workspace = true
hir-def.workspace = true
hir-ty.workspace = true
hir.workspace = true
# ide-db.workspace = true
# intern.workspace = true
# This should only be used in CLI
# ide-ssr.workspace = true
ide.workspace = true
# load-cargo.workspace = true
# profile.workspace = true
# project-model.workspace = true
stdx.workspace = true
syntax.workspace = true
parser.workspace = true
# toolchain.workspace = true
vfs-notify.workspace = true
vfs.workspace = true
paths.workspace = true
camino = "1.1.10"
base-db.workspace = true
text-edit.workspace = true
line-index.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Threading",
] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5.0", package = "tikv-jemallocator", optional = true }

[dev-dependencies]
# expect-test.workspace = true
# xshell.workspace = true

# test-utils.workspace = true
# test-fixture.workspace = true
# syntax-bridge.workspace = true

[features]
jemalloc = [
  "jemallocator",
  # "profile/jemalloc"
]
force-always-assert = ["stdx/force-always-assert"]
sysroot-abi = []

[lints]
workspace = true
