[package]
name = "wgsl-analyzer"
version = "0.0.0"
# homepage = "https://wgsl-analyzer.github.io/"
repository.workspace = true
description = "A language server for WGSL and WESL code"
# documentation = "https://wgsl-analyzer.github.io/manual.html"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]

[[bin]]
name = "wgsl-analyzer"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.99"
# base64 = "0.22"
crossbeam-channel = "0.5.15"
# dirs = "5.0.1"
dissimilar = "1.0.10"
ide-completion.workspace = true
itertools = "0.14.0"
# scip = "0.5.2"
lsp-types = { version = "=0.95.0", features = ["proposed"] }
parking_lot = "0.12.4"
xflags = "0.3.2"
# threadpool = "1.8.1"
salsa = "0.17.0-pre.2"
oorandom = "11.1.5"
rayon = "1.11.0"
rustc-hash = "2.1.1"
serde_json = { version = "1.0.143", features = ["preserve_order"] }
serde = { version = "1.0.219", features = ["derive"] }
# tenthash = "1.0.0"
num_cpus = "1.17.0"
mimalloc = { version = "0.1.48", default-features = false, optional = true }
lsp-server = "0.7.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
  "registry",
  "fmt",
  "local-time",
  "std",
  "time",
  "tracing-log",
] }
tracing-tree = "0.3.1"
triomphe = { version = "0.1.14", default-features = false, features = ["std"] }
# toml = "0.8.8"
nohash-hasher = "0.2.0"
walkdir = "2.5.0"
semver = "1.0.26"
memchr = "2.7.5"
cargo_metadata = "0.22.0"
# process-wrap = { version = "8.2.0", features = ["std"] }
# cfg.workspace = true
hir-def.workspace = true
hir-ty.workspace = true
hir.workspace = true
ide-db.workspace = true
# intern.workspace = true
# This should only be used in CLI
# ide-ssr.workspace = true
ide.workspace = true
# load-wesl.workspace = true
# profile.workspace = true
# project-model.workspace = true
stdx.workspace = true
syntax.workspace = true
parser.workspace = true
# toolchain.workspace = true
vfs-notify.workspace = true
vfs.workspace = true
paths.workspace = true
camino = "1.1.12"
base-db.workspace = true
line-index = "0.1.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Threading",
] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.6.0", package = "tikv-jemallocator", optional = true }

[dev-dependencies]
# expect-test = "1.5.1"
# xshell = "0.2.7"

test-utils.workspace = true
# test-fixture.workspace = true
# syntax-bridge.workspace = true

[features]
jemalloc = [
  "jemallocator",
  # "profile/jemalloc"
]
force-always-assert = ["stdx/force-always-assert"]
sysroot-abi = []

[lints]
workspace = true
