[package]
name = "wgsl-analyzer"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "A language server for WGSL and WESL code"
# homepage = "https://wgsl-analyzer.github.io/"
repository.workspace = true
license.workspace = true
# documentation = "https://wgsl-analyzer.github.io/manual.html"
autobins = false

[lib]

[[bin]]
name = "wgsl-analyzer"
path = "src/bin/main.rs"

# tombi: format.rules.table-keys-order.disabled = true
[dependencies]
anyhow.workspace = true
# base64 = "0.22"
crossbeam-channel.workspace = true
# dirs = "5.0.1"
dissimilar.workspace = true
ide-completion.workspace = true
itertools.workspace = true
# scip = "0.5.2"
lsp-types = { version = "=0.95.0", features = ["proposed"] }
parking_lot = "0.12.5"
xflags = "0.3.2"
# threadpool = "1.8.1"
salsa.workspace = true
oorandom = "11.1.5"
rayon.workspace = true
rustc-hash.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
serde.workspace = true
# tenthash = "1.0.0"
num_cpus = "1.17.0"
mimalloc = { version = "0.1.48", default-features = false, optional = true }
lsp-server.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
triomphe.workspace = true
# toml = "0.8.8"
nohash-hasher.workspace = true
walkdir.workspace = true
semver.workspace = true
memchr = "2.7.6"
cargo_metadata.workspace = true
# process-wrap = { version = "8.2.0", features = ["std"] }
# cfg.workspace = true
hir-def.workspace = true
hir-ty.workspace = true
hir.workspace = true
ide-db.workspace = true
# intern.workspace = true
# This should only be used in CLI
# ide-ssr.workspace = true
ide.workspace = true
# load-wesl.workspace = true
# profile.workspace = true
# project-model.workspace = true
stdx.workspace = true
syntax.workspace = true
parser.workspace = true
# toolchain.workspace = true
vfs-notify.workspace = true
vfs.workspace = true
paths.workspace = true
camino.workspace = true
base-db.workspace = true
line-index.workspace = true

[dev-dependencies]
# expect-test = "1.5.1"
# xshell = "0.2.7"

test-utils.workspace = true
# test-fixture.workspace = true
# syntax-bridge.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { package = "tikv-jemallocator", version = "0.6.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Threading",
] }

[features]
force-always-assert = ["stdx/force-always-assert"]
jemalloc = [
  "jemallocator",
  # "profile/jemalloc"
]
sysroot-abi = []

[lints]
workspace = true
