[package]
name = "wgsl_analyzer"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "wgsl_analyzer"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.44"
crossbeam-channel = "0.5.1"
lsp-server = "0.6.0"
lsp-types = "0.94.0"
parking_lot = "0.12"
serde = "1.0.130"
serde_json = "1.0.68"
threadpool = "1.8.1"
tracing = "0.1.28"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
salsa = "0.17.0-pre.1"
rustc-hash = "1.1.0"

base_db = { path = "../base_db" }
hir_def = { path = "../hir_def" }
hir_ty = { path = "../hir_ty" }
hir = { path = "../hir" }
ide = { path = "../ide" }
ide_completion = { path = "../ide_completion" }

vfs = { git = "https://github.com/rust-analyzer/rust-analyzer", rev = "0ee4e6a22" }
paths = { git = "https://github.com/rust-analyzer/rust-analyzer", rev = "0ee4e6a22" }
text-edit = { git = "https://github.com/rust-analyzer/rust-analyzer", rev = "0ee4e6a22" }
itertools = "0.10.1"
dissimilar = "1.0.3"
