[package]
name = "wgsl_analyzer"
version = "0.0.0"
# homepage = "https://wgsl-analyzer.github.io/"
repository.workspace = true
description = "A language server for the WGSL programming language"
# documentation = "https://wgsl-analyzer.github.io/manual.html"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[[bin]]
name = "wgsl_analyzer"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.95"
crossbeam-channel = "0.5.14"
lsp-server = "0.7.8"
lsp-types = "0.95.0"
serde = "1.0.217"
serde_json = "1.0.138"
threadpool = "1.8.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
salsa = "0.17.0-pre.2"
rustc-hash = "2.1.0"

base-db = { path = "../base_db", version = "0.0.0" }
hir-def = { path = "../hir_def", version = "0.0.0" }
hir-ty = { path = "../hir_ty", version = "0.0.0" }
hir = { path = "../hir", version = "0.0.0" }
ide = { path = "../ide", version = "0.0.0" }
ide-completion = { path = "../ide_completion", version = "0.0.0" }

vfs = { git = "https://github.com/rust-lang/rust-analyzer", rev = "8a23314", version = "0.0.0" }
paths = { git = "https://github.com/rust-lang/rust-analyzer", rev = "8a23314", version = "0.0.0" }
text-edit = { git = "https://github.com/rust-lang/rust-analyzer", rev = "8a23314", version = "0.0.0" }
itertools = "0.14.0"
dissimilar = "1.0.9"

[lints]
workspace = true
