[package]
name = "wgsl-formatter"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "RPC Api for the `proc-macro-srv` crate of wgsl-analyzer."
repository.workspace = true
license.workspace = true

[dependencies]
parser.workspace = true
rowan = "0.16.1"
syntax.workspace = true

[dev-dependencies]
dissimilar = "1.0.10"
# anyhow = "1.0.99"
expect-test = "1.5.1"

[lints]
workspace = true
