[package]
name = "wgsl-parser"
version = "0.0.0"
readme = "README.md"
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["wgsl"]

[dependencies]
logos.workspace = true
parser.workspace = true
rowan.workspace = true

[dev-dependencies]
expect-test.workspace = true
